--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
     - name: docker build and push action
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
-       image: marktplaatsrepo/afedjah/markplaatsrepo
+       image: afedjah/markplaatsrepo
        tags: backend
        registry: docker.io
        username: ${{ secrets.DOCKER_USERNAME }}
