--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>marktplaats app </description>
 	<properties>
 		<java.version>19</java.version>
+		<sonar.organization>zakariae</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -67,5 +69,4 @@
 			</plugin>
         </plugins>
 	</build>
-
 </project>
