--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.9.1.2184</version>
+			</plugin>
         </plugins>
 	</build>
 </project>
