--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,17 +24,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Cache Maven packages
-      uses: actions/cache@v1
-      with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-    - name: Build and analyze
+    - name: Sonnarscanner for Maven
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+      run: mvn verify sonar:sonar \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.organization=zakariae \
           -Dsonar.projectKey=ZakariaEssaouiki_marktplaatsBackend
