--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>19</java.version>
 		<sonar.organization>zakariae</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>ZakariaEssaouiki_marktplaatsBackend</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
