--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Cache SonarCloud packages
       uses: actions/cache@v1
       with:
+        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
         path: ~/.sonar/cache
         key: ${{ runner.os }}-sonar
         restore-keys: ${{ runner.os }}-sonar
