--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<sonar.organization>zakariae</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.projectKey>ZakariaEssaouiki_marktplaatsBackend</sonar.projectKey>
+		<sonar.coverage.jacoco.xmlReportPaths>../marktplaats/target/reportJaCoCo.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.java.binaries>target</sonar.java.binaries>
 	</properties>
 	<dependencies>
