--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
 		<sonar.organization>zakariae</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.projectKey>ZakariaEssaouiki_marktplaatsBackend</sonar.projectKey>
-		<sonar.coverage.jacoco.xmlReportPaths>target/reportJaCoCo.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.java.binaries>target</sonar.java.binaries>
 	</properties>
 	<dependencies>
@@ -92,11 +91,48 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<formats>
+								<format>XML</format>
+							</formats>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
         </plugins>
 	</build>
 
-	<profiles>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<!-- select non-aggregate reports -->
+							<report>report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
+
+	<!--<profiles>
 	<profile>
 		<id>coverage</id>
 		<build>
@@ -128,5 +164,5 @@
 			</plugins>
 		</build>
 	</profile>
-	</profiles>
+	</profiles>-->
 </project>
