--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
 		</plugins>
 	</reporting>
 
-	<!--<profiles>
+	<profiles>
 	<profile>
 		<id>coverage</id>
 		<build>
@@ -164,5 +164,5 @@
 			</plugins>
 		</build>
 	</profile>
-	</profiles>-->
+	</profiles>
 </project>
