--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,11 +44,7 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ZakariaEssaouiki_marktplaatsBackend
-      run: mvn verify sonar:sonar \
-        -Dsonar.host.url=https://sonarcloud.io \
-        -Dsonar.organization=zakariae \
-        -Dsonar.projectKey=ZakariaEssaouiki_marktplaatsBackend
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ZakariaEssaouiki_marktplaatsBackend
 
     - uses: mr-smithers-excellent/docker-build-push@v5
       name: Build & push Docker image
