--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Marktplaats
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/Marktplaats
 spring.datasource.username=afedjah
 spring.datasource.password=GoGetEm22!
 
