--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.url=jdbc:mysql://host.docker.internal:3306/Marktplaats
 spring.datasource.username=afedjah
 spring.datasource.password=GoGetEm22!
 
+spring.mvc.dispatch-options-request=true
+
+okta.oauth2.issuer=https://dev-01953307.okta.com/oauth2/default
+okta.oauth2.client-id=0oa78gv7cbToLNTri5d7
+okta.oauth2.client-secret=FnvK-dYnvMTaUVkOUEflKSS25eqZWhN-2ljmJBBs
+spring.profiles.active=@spring.profiles.active@
