--- a/pom.xml
+++ b/pom.xml
@@ -144,10 +144,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.5.1</version>
 		</dependency>-->
-		<dependency>
+
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<!--MessageBroker -->
 <!--		<dependency>
